--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -272,6 +272,8 @@ on post-fs-data
     # Create /data/time folder for time-services
     mkdir /data/time 0700 system system
 
+    chown system /dev/block/platform/msm_sdcc.1/by-name
+
     setprop vold.post_fs_data_done 1
 
     rm /data/local/tmp/adreno_config.txt
@@ -281,10 +283,10 @@ on property:init.svc.wpa_supplicant=stopped
 
 # SONY: TrimArea Daemon
 # Last 2 args: start block(blk size 128k), number of blocks(partitionsize(kb)/128(kb))
-service tad_static /sbin/tad_static /dev/block/mmcblk0 1,16
+service tad_static /sbin/tad_static /dev/block/platform/msm_sdcc.1/by-name/TA 0,16
     user root
     group root
-    socket tad stream 0666 system system
+    socket tad stream 0660 system system
     class core
 
 service taimport /system/bin/taimport
